fixed input issue on firefox

--- a/src/styles/_autocomplete.sass
+++ b/src/styles/_autocomplete.sass
@@ -10,7 +10,7 @@
 
 .react-autosuggest__input
   width: 100%
-  height: 50px
+  height: 60px
   padding: 20px
   font-family: 'Dosis', sans-serif
   font-weight: 300
